# cpp23-hello-world

./: LICENSE  README.md  main.cpp  meson.build
.github/workflows/: ci_meson.yml
